--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/html2canvas": "^0.5.34",
+    "@types/jspdf": "^1.1.31",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
+    "html2canvas": "^0.5.0-beta4",
+    "jspdf": "^1.3.3",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
