--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy": "angular-cli-ghpages --name='ckkishore64' --email='ckkishore64@gmail.com'"
   },
   "private": true,
   "dependencies": {
@@ -36,6 +37,7 @@
     "@angular/language-service": "^4.0.0",
     "@types/jasmine": "2.5.45",
     "@types/node": "~6.0.60",
+    "angular-cli-ghpages": "^0.5.1",
     "angular-in-memory-web-api": "^0.3.2",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
